# token-creation

./: Anchor.toml  README.md  package-lock.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/components/ui/: accordion.tsx  button.tsx  dropdown-menu.tsx  input.tsx
frontend/src/components/: CryptoOptions.tsx
frontend/src/components/ui/: input.tsx
frontend/src/lib/: Solana.ts
frontend/src/pages/: _app.tsx  home.tsx  index.tsx  liquidity.tsx
frontend/src/styles/: globals.css
programs/token-creation/: Cargo.toml
programs/token-creation/src/: events.rs  instructions.rs  lib.rs
programs/wheather/: Cargo.toml
programs/wheather/src/: errors.rs  instructions.rs  lib.rs
tests/: token-creation.ts  wheather.ts
